<resources>
    <string name="app_name">NutritionOnABudget</string>
    <string name="save_calories">Save</string>
    <string name="search">Search</string>
    <string name="search_btn">Next</string>
    <string name="total_dollars">Dollar Budget</string>
    <string name="total_calories">Calorie Budget</string>
    <string name="save_dollars">Save</string>
    <string name="test">test</string>
</resources>
