<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="36dp"
        android:paddingBottom="16dp"
        android:orientation="vertical" >
        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/total_calories"
            android:id="@+id/total_calories"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/save_calories"
            android:id="@+id/save_calories"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/total_dollars"
            android:id="@+id/total_dollars"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/save_dollars"
            android:id="@+id/save_dollars"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/search"
            android:id="@+id/search_txt"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/search_btn"
            android:id="@+id/search_btn"/>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>